Add Cloudflare Worker setup with game state API, Mars endpoints, and initial configuration files

--- a/web/index.html
+++ b/web/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mars Interloper</title>
+    <!-- Open Graph meta tags -->
+    <meta property="og:title" content="Mars Interloper" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="marsjump.png" />
     <!-- Mars-themed favicons -->
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="alternate icon" href="favicon.ico" type="image/x-icon">
