--- a/web/index.html
+++ b/web/index.html
@@ -11,7 +11,7 @@
     <!-- Mars-themed favicons -->
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <link rel="alternate icon" href="favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="web/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
     <!-- Nipple.js for mobile controls -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/nipplejs/0.10.1/nipplejs.min.js"></script>
@@ -267,7 +267,7 @@
             }
         }
     </script>
-    <script type="module" src="web/js/main.js"></script>
+    <script type="module" src="/js/main.js"></script>
     <script>
         // Add mobile detection and hide desktop controls on mobile
         document.addEventListener('DOMContentLoaded', function() {
